# riscv32-emulator

./: CMakeLists.txt  README.md
linux/: emu.dtb  emu.dts
src/: CMakeLists.txt  basic_memory.cpp  basic_memory.hpp  bit_field.hpp  cpu.cpp  cpu.hpp  decoder.hpp  emulator_exception.cpp  emulator_exception.hpp  gpr.hpp  instruction_type.hpp  main.cpp  mem_map_handler.hpp  mem_map_manager.cpp  mem_map_manager.hpp  memory.cpp  memory.hpp  phy_mem_map.cpp  phy_mem_map.hpp  vmem.hpp
src/rv32/: CMakeLists.txt  csr.hpp  decoder.cpp  hart.cpp  hart.hpp  instruction.hpp  vmem.hpp
src/rv32ima/: csr.hpp  decoder.cpp  decoder.hpp  hart.cpp  hart.hpp  instruction.hpp  vmem.hpp
